# canonizer-registry

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REGISTRY_INDEX.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: validate.yml
schemas/com.google/forms_response/jsonschema/: 1-0-0.json
schemas/com.google/gmail_email/jsonschema/: 1-0-0.json
schemas/com.microsoft/exchange_email/jsonschema/: 1-0-0.json
schemas/org.canonical/email/jsonschema/: 1-0-0.json
schemas/org.canonical/email_jmap_full/jsonschema/: 1-0-0.json
schemas/org.canonical/email_jmap_lite/jsonschema/: 1-0-0.json
schemas/org.canonical/email_jmap_minimal/jsonschema/: 1-0-0.json
schemas/org.canonical/form_mapping/jsonschema/: 1-0-0.json
schemas/org.canonical/form_response/jsonschema/: 1-0-0.json
schemas/org.canonical/questionnaire_measure/jsonschema/: 1-0-0.json
tools/: generate_index.py  validate.py
transforms/email/exchange_to_jmap_full/1.0.0/: spec.jsonata  spec.meta.yaml
transforms/email/exchange_to_jmap_full/1.0.0/tests/: expected.json
transforms/email/exchange_to_jmap_lite/1.0.0/tests/: expected.json  input.json
transforms/email/exchange_to_jmap_minimal/1.0.0/: spec.jsonata  spec.meta.yaml
transforms/email/exchange_to_jmap_minimal/1.0.0/tests/: expected.json
transforms/email/gmail_to_canonical/1.0.0/: spec.jsonata  spec.meta.yaml
transforms/email/gmail_to_jmap_full/1.0.0/: spec.jsonata  spec.meta.yaml
transforms/email/gmail_to_jmap_minimal/1.0.0/: spec.jsonata  spec.meta.yaml
(+8 files in other folders)
